<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.maple.com.gobang.MainActivity">


    <com.maple.com.gobang.HumanBattleView
        android:id="@+id/humanBattleView"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <Button
        android:text="@string/Re_play"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:id="@+id/startAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_below="@+id/humanBattleView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sound"
        android:textSize="20dp"
        android:id="@+id/switch1"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Retract"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:id="@+id/btnRetract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_alignBottom="@+id/startAgain"
        android:layout_alignRight="@+id/switch1"
        android:layout_alignEnd="@+id/switch1" />

    <RelativeLayout
        android:id="@+id/ada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >
    </RelativeLayout>
</RelativeLayout>