<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/mainbgg"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gobang"
        android:id="@+id/imageView"
        android:layout_marginTop="66dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="25dp"

            android:layout_below="@+id/ivVersion"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#00000000"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#00000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sina_MicroBlog"
            android:textSize="25dp"
            android:layout_below="@+id/ivExplain"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/gd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

    </RelativeLayout>

</RelativeLayout>